# tankbattle

./: .gitignore  CMakeLists.txt  README.md
engine/: README.md  engine.c  engine.h  game.c  internals.h  objects.c  type.h
engine/internals/: internals.h  mem.c  mem.h  mem_utils.c  render.c
include/: calc.h  movements.h  tankbattle.h
include/engine/: engine.h
src/: calc.c  movements.c  tankbattle.c
tankbattle/: tankbattle.c  tankbattle.h
tests/: calc.c  engine.c  internals.c  test.c
